RESOLVED FIXED72217
REGRESSION (WebKit2): Lookup bubble sized and positioned incorrectly (vertically off)
https://bugs.webkit.org/show_bug.cgi?id=72217
Summary REGRESSION (WebKit2): Lookup bubble sized and positioned incorrectly (vertica...
mitz
Reported 2011-11-12 13:46:06 PST
REGRESSION (WebKit2): Lookup bubble sized and positioned incorrectly (vertically off)
Attachments
Use the WebCore::Font’s ascender height instead of the derived NSFont’s ascender. (2.52 KB, patch)
2011-11-12 13:50 PST, mitz
hyatt: review+
mitz
Comment 1 2011-11-12 13:47:38 PST
<rdar://problem/10294191> * SUMMARY In WebKit2 windows, the Lookup bubble does not line up exactly with the text. Its top is two pixels above where it should be, and the content is shifted up by two pixels. * NOTES Sometimes it’s only off by one, and sometimes the bubble height is wrong as well.
mitz
Comment 2 2011-11-12 13:50:17 PST
Created attachment 114842 [details] Use the WebCore::Font’s ascender height instead of the derived NSFont’s ascender.
mitz
Comment 3 2011-11-12 14:13:57 PST
Note You need to log in before you can comment on or make changes to this bug.