<rdar://problem/10294191> REGRESSION (WebKit2): Lookup bubble sized and positioned incorrectly (vertically off) https://bugs.webkit.org/show_bug.cgi?id=72217

Reviewed by Dave Hyatt.

* UIProcess/API/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::didPerformDictionaryLookup): Rather than adding the NSFont’s ascender
to the top of the text rect to establish the baseline here...
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performDictionaryLookupForRange): ...do it here, using the WebCore::Font’s
ascender, which is what’s actually used when drawing the text.



Canonical link: https://commits.webkit.org/88640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100083 268f45cc-cd09-0410-ab3c-d52691b4dbfc